Add services to amber container build

--- a/amber/Dockerfile
+++ b/amber/Dockerfile
@@ -30,5 +30,5 @@ ENV MAMBA_USER=$NEW_MAMBA_USER
 USER $MAMBA_USER
 
 # Install dependencies
-RUN micromamba install -c conda-forge python=$PYTHONVERSION aiida-core=$AIIDAVERSION ambertools=$AMBERTOOLSVERSION && \
+RUN micromamba install -c conda-forge python=$PYTHONVERSION aiida-core=$AIIDAVERSION aiida-core.services=$AIIDAVERSION ambertools=$AMBERTOOLSVERSION && \
 micromamba clean --all --yes
