switch to multistep builds

--- a/.github/workflows/gromacs.yml
+++ b/.github/workflows/gromacs.yml
@@ -11,6 +11,7 @@ jobs:
         aiida-core: [2.6.1, 2.6.2, 2.6.3]
         gromacs: [2025.4]
         python: [3.11]
+        plumed: [2.9.2]
     name: py${{ matrix.python }}-aiida${{ matrix.aiida-core }}-gromacs${{ matrix.gromacs }}
     steps:
 
@@ -39,6 +40,7 @@ jobs:
           build-args: |
             AIIDAVERSION=${{ matrix.aiida-core }}
             GMXVERSION=${{ matrix.gromacs }}
+            PLUMEDVERSION=${{ matrix.plumed }}
             PYTHONVERSION=${{ matrix.python }}
           tags: ghcr.io/${{ vars.ORG_REPO }}/aiida-gromacs-testenv:${{ steps.date.outputs.tag }}
           push: true
