--- a/gromacs/Dockerfile
+++ b/gromacs/Dockerfile
@@ -75,7 +75,7 @@ RUN mkdir /github && \
 USER ${SYSTEM_UID}
 
 # Download and install Micromamba, and initialize Conda prefix.
-COPY --chown="${SYSTEM_UID}:${SYSTEM_GID}" .condarc "${CONDA_DIR}/.condarc"
+COPY --chown="${SYSTEM_UID}:${SYSTEM_GID}" gromacs/.condarc "${CONDA_DIR}/.condarc"
 WORKDIR /tmp
 RUN set -x && \
     arch=$(uname -m) && \
