--- a/.github/workflows/amber.yml
+++ b/.github/workflows/amber.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        ambertools: [25]
-        python: [3.11]
+        ambertools: [24, 25]
+        python: [3.11, 3.12, 3.13]
     name: py${{ matrix.python }}-ambertools${{ matrix.ambertools }}
     steps:
  
